--- a/docs/main.css
+++ b/docs/main.css
@@ -664,14 +664,14 @@ svg.leaflet-image-layer.leaflet-interactive path {
   .product .product__img {
     display: flex;
     align-items: center; }
+  .product h3 {
+    font-family: 'Lobster', cursive; }
 
 @media (min-width: 1024px) {
   .product {
     padding: 2% 0;
     line-height: 1.6rem;
     font-size: 1.1rem; }
-    .product h3 {
-      margin: 0 0 .5rem 0; }
     .product > div {
       padding: 0 .6rem; }
     .product .product__img img {
@@ -682,21 +682,43 @@ svg.leaflet-image-layer.leaflet-interactive path {
     padding: 2% 0;
     line-height: 1.4rem;
     font-size: 1rem; }
-    .product h3 {
-      margin: 0 0 .5rem 0; }
     .product > div {
       padding: 0 .3rem; }
     .product .product__img img {
       width: 5rem; } }
 
+.contacts {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-bottom: 1rem; }
+  .contacts .contacts__map, .contacts .contacts__details {
+    display: flex; }
+  .contacts #map {
+    display: block;
+    width: 100%; }
+  .contacts .contacts__details {
+    display: flex;
+    flex-direction: column; }
+    .contacts .contacts__details > div {
+      display: flex; }
+
 @media (min-width: 1024px) {
   #map {
-    height: 16rem;
-    width: 40%; } }
+    height: 16rem; }
+  .contacts__map {
+    width: 40%; }
+  .contacts__details {
+    padding: 0 1%;
+    width: 58%; } }
 
 @media (max-width: 1024px) {
   #map {
-    height: 12rem;
+    height: 12rem; }
+  .contacts__map {
+    width: 100%; }
+  .contacts__details {
     width: 100%; } }
 
 @font-face {
@@ -713,6 +735,13 @@ svg.leaflet-image-layer.leaflet-interactive path {
   src: local("Lobster Regular"), local("Lobster-Regular"), url(fonts/lobster-latin.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD; }
 
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Roboto"), local("Roboto-Regular"), url(fonts/roboto-cyrillic.woff2) format("woff2");
+  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116; }
+
 body {
   margin: 0;
   min-height: 100vh;
@@ -720,7 +749,11 @@ body {
   display: flex;
   justify-content: center;
   color: #41525b;
-  font-family: 'Lobster', cursive; }
+  font-family: 'Roboto', sans-serif; }
+  body .float-left {
+    float: left; }
+  body .float-right {
+    float: right; }
   body hr {
     background-color: #41525b;
     border: none;
