--- a/src/index.pug
+++ b/src/index.pug
@@ -13,18 +13,18 @@ html
             div.products
                 div.product
                     div.product__img
-                        img(src='./images/bread_1.jpg')
+                        img(src='./images/bread_3.jpg')
                     div.product__about
-                        h3 Хлеб "Ржаной край" формовой
+                        h3 Хлеб "Ржаной край" на закваске
                         div
                             b Состав:
-                            |  мука ржаная, мука обдирная, закваска, вода, солод ячменный, соль пищевая йодированная, кориандр
+                            |  мука ржаная, мука обдирная, закваска, вода, солод ячменный, соль пищевая йодированная
                         div
                             b Срок годности:
                             |  72 часа
                         div
                             b Сертификат:
-                            |  СТБ
+                            |  СТБ-639
                         div
                             b Масса:
                             |  350 г
@@ -35,7 +35,7 @@ html
                             |  р
                 div.product.align-right
                     div.product__about
-                        h3 Хлеб "Ржаной край" зерновой
+                        h3 Хлеб "Ржаной край" зерновой на закваске
                         div
                             b Состав:
                             |  мука ржаная, мука обдирная, закваска, вода, семена тыквы, семена льна, семена подсолнечника, кунжут,
@@ -45,20 +45,20 @@ html
                             |  72 часа
                         div
                             b Сертификат:
-                            |  СТБ
+                            |  СТБ-639
                         div
                             b Масса:
                             |  350 г
                         div
                             b Цена:
                             |  1
-                            sup 00
+                            sup 05
                             |  р
                     div.product__img
-                        img(src='./images/bread_1.jpg')
+                        img(src='./images/bread_2.jpg')
                 div.product
                     div.product__img
-                        img(src='./images/bread_2.jpg')
+                        img(src='./images/bread_4.jpg')
                     div.product__about
                         h3 Хлеб из пшеничной муки формовой
                         div
@@ -69,7 +69,7 @@ html
                             |  72 часа
                         div
                             b Сертификат:
-                            |  СТБ
+                            |  СТБ-1009
                         div
                             b Масса:
                             |  350 г
@@ -89,7 +89,7 @@ html
                             |  72 часа
                         div
                             b Сертификат:
-                            |  СТБ
+                            |  СТБ-1009
                         div
                             b Масса:
                             |  400 г
@@ -99,7 +99,7 @@ html
                             sup 10
                             |  р
                     div.product__img
-                        img(src='./images/bread_2.jpg')
+                        img(src='./images/bread_1.jpg')
             hr
             div.contacts
                 div.contacts__map
