--- a/src/index.pug
+++ b/src/index.pug
@@ -11,95 +11,6 @@ html
                     | без улучшителей и консервантов
             hr
             div.products
-                div.product
-                    div.product__img
-                        img(src='./images/bread_3.jpg')
-                    div.product__about
-                        h3 Хлеб "Ржаной край" на закваске
-                        div
-                            b Состав:
-                            |  мука ржаная, мука обдирная, закваска, вода, солод ячменный, соль пищевая йодированная
-                        div
-                            b Срок годности:
-                            |  72 часа
-                        div
-                            b Сертификат:
-                            |  СТБ-639
-                        div
-                            b Масса:
-                            |  350 г
-                        div
-                            b Цена:
-                            |  0
-                            sup 90
-                            |  р
-                div.product.align-right
-                    div.product__about
-                        h3 Хлеб "Ржаной край" зерновой на закваске
-                        div
-                            b Состав:
-                            |  мука ржаная, мука обдирная, закваска, вода, семена тыквы, семена льна, семена подсолнечника, кунжут,
-                            | солод ячменный, соль пищевая йодированная, кориандр
-                        div
-                            b Срок годности:
-                            |  72 часа
-                        div
-                            b Сертификат:
-                            |  СТБ-639
-                        div
-                            b Масса:
-                            |  350 г
-                        div
-                            b Цена:
-                            |  1
-                            sup 05
-                            |  р
-                    div.product__img
-                        img(src='./images/bread_2.jpg')
-                div.product
-                    div.product__img
-                        img(src='./images/bread_4.jpg')
-                    div.product__about
-                        h3 Хлеб из пшеничной муки формовой
-                        div
-                            b Состав:
-                            |  мука высшего и первого сортов, вода, дрожжи, соль пищевая йодированная
-                        div
-                            b Срок годности:
-                            |  72 часа
-                        div
-                            b Сертификат:
-                            |  СТБ-1009
-                        div
-                            b Масса:
-                            |  350 г
-                        div
-                            b Цена:
-                            |  0
-                            sup 85
-                            |  р
-                div.product.align-right
-                    div.product__about
-                        h3 Хлеб из пшеничной муки "Матнакаш"
-                        div
-                            b Состав:
-                            |  мука высшего и первого сортов, закваска, вода, соль пищевая йодированная, кунжут
-                        div
-                            b Срок годности:
-                            |  72 часа
-                        div
-                            b Сертификат:
-                            |  СТБ-1009
-                        div
-                            b Масса:
-                            |  400 г
-                        div
-                            b Цена:
-                            |  1
-                            sup 10
-                            |  р
-                    div.product__img
-                        img(src='./images/bread_1.jpg')
             hr
             div.contacts
                 div.contacts__map
@@ -115,5 +26,5 @@ html
                             a(href="tel:+37529-123-99-99") +37529 123-99-99
                     div.email
                         span
-                            b e-mail:&nbsp;
+                            b E-mail:&nbsp;
                             a(href="mailto:babik123@yandex.ru") babik123@yandex.ru
