--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -31,6 +31,12 @@ body
   justify-content: center
   color: $main-color
   font-family: 'Roboto', sans-serif
+  .grid-y
+    display: flex
+    flex-direction: column
+  .grid-x
+    display: flex
+    flex-direction: row
   .float-left
     float: left
   .float-right
