--- a/src/index.pug
+++ b/src/index.pug
@@ -24,7 +24,9 @@ html
                         span
                             b Телефон:&nbsp;
                             a(href="tel:+37529-123-99-99") +37529 123-99-99
+                                img(src='./icons/phone.svg')
                     div.email
                         span
                             b E-mail:&nbsp;
                             a(href="mailto:babik123@yandex.ru") babik123@yandex.ru
+                                img(src='./icons/email.svg')
