--- a/src/sass/blocks/contacts.sass
+++ b/src/sass/blocks/contacts.sass
@@ -17,10 +17,14 @@
     flex-direction: column
     > div
       display: flex
-    a
+    .email, .phone
       font-size: 1.1rem
+    a
       text-decoration: none
-      color: #0db14b
+      color: $href-color
+      img
+        padding-left: .5rem
+        vertical-align: middle
 @media(min-width: $desktop-width)
   #map
     height: 16rem
