--- a/src/index.pug
+++ b/src/index.pug
@@ -28,5 +28,5 @@ html
                     div.email
                         span
                             b E-mail:&nbsp;
-                            a(href="mailto:babik123@yandex.ru") babik123@yandex.ru
+                            a(href="mailto:anait3108@yandex.ru") anait3108@yandex.ru
                                 img(src='./icons/email.svg')
